Added test points for arenas, positions, and teams
