# routes/teams.js
@@ -1,17 +1,17 @@
 const express = require('express');
 const router = express.Router();
-// const { requiresAuth } = require('express-openid-connect');
+const { requiresAuth } = require('express-openid-connect');
 
 const teamsController = require('../controllers/teams');
 
 router.get('/', teamsController.getAllTeams);
 
-// router.get('/:id', playersController.getSingle);
+router.get('/:id', teamsController.getSingleTeam);
 
-// router.post('/', requiresAuth(), playersController.createContact);
+router.post('/', requiresAuth(), teamsController.createTeam);
 
-// router.put('/:id', requiresAuth(), playersController.updateContact);
+router.put('/:id', requiresAuth(), teamsController.updateTeam);
 
-// router.delete('/:id', requiresAuth(), playersController.deleteContact);
+router.delete('/:id', requiresAuth(), teamsController.deleteTeam);
 
 module.exports = router;
